// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormLayout > matches snapshot for horizontal direction 1`] = `
<div
  class="astryx-form-layout horizontal FormLayout__styles.base xdt5ytf x18g69wz FormLayout__styles.horizontal xrvj5dj x1mt1orb xu6a5m6"
  data-direction="horizontal"
  data-testid="layout"
>
  <input
    placeholder="First"
  />
  <input
    placeholder="Last"
  />
</div>
`;

exports[`FormLayout > matches snapshot for horizontal-labels direction 1`] = `
<div
  class="astryx-form-layout horizontal-labels FormLayout__styles.base xdt5ytf FormLayout__styles.horizontalLabels xrvj5dj x1pmbctz xlaq8a2 x7a106z xedohl4 x1rpgqan x1a1jff"
  data-direction="horizontal-labels"
  data-testid="layout"
>
  <label>
    Name
  </label>
  <input
    placeholder="Name"
  />
</div>
`;

exports[`FormLayout > matches snapshot for vertical direction 1`] = `
<div
  class="astryx-form-layout vertical FormLayout__styles.base x78zum5 xdt5ytf x18g69wz"
  data-direction="vertical"
  data-testid="layout"
>
  <input
    placeholder="Name"
  />
  <input
    placeholder="Email"
  />
</div>
`;
